syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";
import "NullableGrpcDate.proto";

message UpdateLoanAssessmentParametersRequest {
	int32 SalesArrangementId = 1;
	
	google.protobuf.StringValue LoanApplicationAssessmentId = 2;

	google.protobuf.StringValue RiskSegment = 3;

	google.protobuf.StringValue CommandId = 4;

	cis.types.NullableGrpcDate RiskBusinessCaseExpirationDate = 5;

	google.protobuf.StringValue RiskBusinessCaseId = 6;

	google.protobuf.StringValue LoanApplicationDataVersion = 7;
}
